{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "ba96d698-05c8-48b7-beb7-97f939af8bc0",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "fd8032b5-b8c1-47d1-a8f9-2dda679e25c4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPress",
                    "type": "Button",
                    "id": "dbdfe8f0-be37-40ad-b7fd-b451ce7a57be",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8d8a8895-89fa-4052-bbff-1b9303386dc1",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48cfb251-d97e-43de-b3b0-a614ce46004d",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}